# ProjectTemplate

./: CMakeLists.txt  main.cpp
test/: Tests.cpp
